core/test/org.ebayopensource.vjet.test.core.jstojava/testFiles/org/ebayopensource/dsf/jst/validation/vjo/BugFixes/bad/bad/Bug46684.js
vjo.ctype('org.ebayopensource.dsf.jst.validation.vjo.BugFixes.bad.bad.Bug46684') //< public
.endType();